--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ a{
 }
 
 .menu{
-    background-color: black;
+    background-color: purple;
     color: white;
     display: flex;
     justify-content: end;
@@ -42,17 +42,47 @@ li:hover{
 .quadrados{
     display: flex;
     justify-content: end;
-    gap: 4px;
+    gap: 30px;
     padding: 4px; 
+    padding-top: 5%;
+    padding-right: 5%;
 }
 
-.quadrados p{
-    font-size: 15px;
+.novoBloco{
+    background-color: rgb(255, 255, 255);
+    width: 400px;
+    height: 700x;
+    text-align: center;
+    padding: 60px;
+    box-shadow: 0px 4px 10px black;
+    
 }
 
-.quadrados img{
+.novoBloco img{
     height: 350px;
     padding: 10px;
     display: flex;
     gap: 10px;
+    
 }
+
+.novoBloco h1{
+    font-size: 150%;
+}
+
+.novoBloco p{
+    font-size: 20px;
+}
+
+.novoBloco h3{
+    color: purple;
+    padding-top: 10%;
+    font-size: 35px;
+}
+
+button {
+    height: 30px;
+    width: 100px;
+    
+}
+
